First attempt at training model for Nikon D3300 night sky photos
Found out that the star magnitude count is a very important parameter
which is good because it is very predictable.

--- a/ml_dataset_generation_pipeline.ipynb
+++ b/ml_dataset_generation_pipeline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,23 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# File Paths\n",
-    "synthetic_image_set_dir = \"images_data/mag5_1608_no_adverserial_gray/\"          # <-- Configure together\n",
-    "file_descript = \"mag5_1608\"     # Magnitude of stars, Number of star classes    # <-- Configure together\n",
+    "synthetic_image_set_dir = \"images_data/mag5_1608_47deg_gray/\"                               # <-- Configure together\n",
+    "file_descript = \"mag5_1608_47deg\"     # Magnitude of stars, num classes, camera fov         # <-- Configure together\n",
     "\n",
     "# Camera Model\n",
-    "sensor_x = 480\n",
+    "sensor_x = 502\n",
     "sensor_y = 752\n",
     "\n",
     "# Synthetic Error Model Parameters\n",
     "false_stars = 10\n",
     "positional_sigma_all_stars = 0.01\n",
     "positional_sigma_single_star = 0.0001\n",
-    "synthetic_cases = 30           # How much noisy training data to generate per true star\n",
+    "synthetic_cases = 40           # How much noisy training data to generate per true star\n",
     "\n",
     "# Feature Extraction Method\n",
     "feature_extract_method = \"binning\" # \"binning\" or \"angle_proximity\""
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -157,12 +157,13 @@
      "text": [
       "Completed!\n",
       "Dataset Generation Complete, Filepath for model generation: \n",
-      " images_data/mag5_1608_no_adverserial_gray/bins/mag5_1608_bin_features.csv\n"
+      " ../images_data/mag5_1608_47deg_gray/bins/mag5_1608_47deg_bin_features.csv\n"
      ]
     }
    ],
    "source": [
     "if feature_extract_method == \"binning\":\n",
+    "    # TODO: fix binning_feature_extraction to not hardcode bin sizes and also expose window sizes and bin sizes\n",
     "    ft.binning_feature_extraction(synthetic_image_set_dir + '/centroids_synthetic/', synthetic_image_set_dir + '/bins/', file_descript + '_bin_features.csv') # Create single csv with features and labels\n",
     "elif feature_extract_method == \"angle_proximity\":\n",
     "    pass\n",
