--- a/scripts/inference_debug.ipynb
+++ b/scripts/inference_debug.ipynb
@@ -2,15 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-05 17:07:06.965380: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-07-05 17:07:07.618948: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "# Run inference from a sample image \n",
     "\n",
-    "# image_filepath = \"../images_data/mag5_1608_no_adverserial_gray/122001.png\"\n",
-    "image_filepath = \"../images_data/mag5_1608_no_adverserial_gray/4147001.png\"\n",
-    "model_filepath = \"../ml/models/star_tracker_model_large.keras\"\n",
+    "# image_filepath = \"../images_data/test_images/noisy_image.jpg\" # Noisy Test Image\n",
+    "image_filepath = \"../images_data/dslr_night_images_gray/focused_star_dsc0014_752x502_gray.png\" # Night Sky Image\n",
+    "# image_filepath = \"../images_data/mag5_1608_47deg_gray/122001.png\"\n",
+    "# image_filepath = \"../images_data/mag5_1608_47deg_gray/11345001.png\" # Star with least stars in frame (106 other stars)\n",
+    "model_filepath = \"../ml/models/mag5_1608_47deg.keras\"\n",
     "\n",
     "bin_count = 10\n",
     "bin_max_radius = 400\n",
@@ -40,9 +52,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100.95391429890817, 101.0, 17.09336956668357)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-05 17:07:09.533149: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.562418: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.562479: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.566515: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.566589: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.566622: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.733517: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.733616: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.733627: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2019] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2024-07-05 17:07:09.733696: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-07-05 17:07:09.733728: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1928] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3586 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -50,11 +95,11 @@
       "\n",
       "Loaded Model\n",
       "\n",
-      "Reshaped Bins:  [[ 2  0  3  6 10  7  4 12  6  6]]\n",
-      "Max Prediction:  0.87278646 \n",
+      "Reshaped Bins:  [[ 2  6  6 17 20 25 25 25 25 11]]\n",
+      "Prediction Confidence:  0.59298474 \n",
       "\n",
-      "Prediction Index:  34\n",
-      "Label:  4147001\n"
+      "Prediction Index:  1115\n",
+      "Label:  81065001\n"
      ]
     }
    ],
@@ -84,7 +129,7 @@
     "\n",
     "predictions = loaded_model(reshaped_bins)\n",
     "# print(\"Predictions: \", predictions)\n",
-    "print(\"Max Prediction: \", np.max(predictions),\"\\n\")\n",
+    "print(\"Prediction Confidence: \", np.max(predictions),\"\\n\") \n",
     "\n",
     "# sorted_predictions = np.sort(predictions) \n",
     "# print(\"Top 3 Predictions: \", sorted_predictions[-3:])\n",
@@ -92,7 +137,7 @@
     "# TODO: Figure out labels\n",
     "\n",
     "\n",
-    "temp_y_label_source = \"../images_data/mag5_adverserial_bins/mag5_adverserial_bins.csv\"\n",
+    "temp_y_label_source = \"../images_data/mag5_1608_47deg_gray/bins/mag5_1608_47deg_bin_features.csv\"\n",
     "# TODO: read the header instead of hardcoding it\n",
     "dataframe = pd.read_csv(temp_y_label_source, header=0, names=[\"HIP\", \"bin0\", \"bin1\", \"bin2\", \"bin3\", \"bin4\", \"bin5\", \"bin6\", \"bin7\", \"bin8\", \"bin9\"])\n",
     "dataset = dataframe.values\n",
