--- a/scripts/inference_debug.ipynb
+++ b/scripts/inference_debug.ipynb
@@ -9,9 +9,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-05 17:07:06.965380: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-07-07 14:27:21.884653: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:479] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-07-07 14:27:21.978403: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:10575] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-07-07 14:27:21.978888: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1442] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-07-07 14:27:22.081925: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-07-05 17:07:07.618948: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-07-07 14:27:23.085556: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -22,7 +25,7 @@
     "image_filepath = \"../images_data/dslr_night_images_gray/focused_star_dsc0014_752x502_gray.png\" # Night Sky Image\n",
     "# image_filepath = \"../images_data/mag5_1608_47deg_gray/122001.png\"\n",
     "# image_filepath = \"../images_data/mag5_1608_47deg_gray/11345001.png\" # Star with least stars in frame (106 other stars)\n",
-    "model_filepath = \"../ml/models/mag5_1608_47deg.keras\"\n",
+    "model_filepath = \"../ml/models/mag5_1608_47deg_64_128_100epoch.keras\"\n",
     "\n",
     "bin_count = 10\n",
     "bin_max_radius = 400\n",
@@ -56,50 +59,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100.95391429890817, 101.0, 17.09336956668357)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-05 17:07:09.533149: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.562418: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.562479: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.566515: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.566589: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.566622: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.733517: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.733616: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.733627: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2019] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
-      "2024-07-05 17:07:09.733696: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2024-07-05 17:07:09.733728: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1928] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3586 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Loaded Model\n",
-      "\n",
-      "Reshaped Bins:  [[ 2  6  6 17 20 25 25 25 25 11]]\n",
-      "Prediction Confidence:  0.59298474 \n",
-      "\n",
-      "Prediction Index:  1115\n",
-      "Label:  81065001\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/mark/GitHub/star-tracker-ml/images_data/dslr_night_images_gray/focused_star_dsc0014_752x502_gray.png'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m centroids \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      4\u001b[0m bins \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 5\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_filepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Calculate centroids for each image\u001b[39;00m\n\u001b[1;32m      8\u001b[0m centroids \u001b[38;5;241m=\u001b[39m ct\u001b[38;5;241m.\u001b[39mcentroids_from_img(img)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/PIL/Image.py:3431\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3428\u001b[0m     filename \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mrealpath(os\u001b[38;5;241m.\u001b[39mfspath(fp))\n\u001b[1;32m   3430\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m filename:\n\u001b[0;32m-> 3431\u001b[0m     fp \u001b[38;5;241m=\u001b[39m \u001b[43mbuiltins\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3432\u001b[0m     exclusive_fp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m   3433\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/mark/GitHub/star-tracker-ml/images_data/dslr_night_images_gray/focused_star_dsc0014_752x502_gray.png'"
      ]
     }
    ],
